added buttons clear and back

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <button id="result">=</button>
         <button id="plus">+</button>
     </div>
+    <div class="clear">
+        <button class ="cbutton">CLEAR</button>
+        <button class="back">BACK</button>
+    </div>
 </div>
 
 
