--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <button id="plus">+</button>
     </div>
     <div class="clear">
-        <button class ="cbutton">CLEAR</button>
-        <button class="back">BACK</button>
+        <button id ="cbutton">CLEAR</button>
+        <button id="back">BACK</button>
     </div>
 </div>
 
